--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.53.2",
     "@tailwindcss/vite": "^4.1.15",
     "humanize-duration": "^3.33.1",
     "quill": "^2.0.3",
